test/LitTests/SemanticAnalysis/LifetimeMethods/InvalidStaticnessIsLive.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__islive' should not be static
	static bool __islive() noexcept {
		return true;
	}
}

// CHECK: 1 error generated.
